Fix casing of IngressClassName to ingressClassName

--- a/ingress/ingress.yaml
+++ b/ingress/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: apps-ingress
   namespace: apps
 spec:
-  IngressClassName: traefik
+  ingressClassName: traefik
   rules:
   - host: sonu.didin.in
     http:
